verkovich/examples/syntax_errors/err_func_definition_after_statement.mcl
int? a = 4
b = 3

c = a + b

func add(x: int, y: int) -> int :
    return x + y

d = add(a, b)
print(d)